--- a/index.html
+++ b/index.html
@@ -18,5 +18,63 @@
   <p>This is some text.</p> 
 </div>
 
+<div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="btn">Dropdown Example
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu" id="ul">
+    <li><a href="#">HTML</a></li>
+    <li><a href="#">CSS</a></li>
+    <li><a href="#">JavaScript</a></li>
+  </ul>
+</div>
+
+<div class="dropdown">
+  <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    Dropdown
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    <li><a href="#" data-value="action">Action</a></li>
+    <li><a href="#" data-value="another action">Another action</a></li>
+    <li><a href="#" data-value="something else here">Something else here</a></li>
+    <li><a href="#" data-value="separated link">Separated link</a></li>
+  </ul>
+</div>
+
+<div class="btn-group">
+  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+    Option: <span class="selection">Option 1</span><span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">Option 1</a></li>
+    <li><a href="#">Option 2</a></li>
+    <li><a href="#">Option 3</a></li>
+  </ul>
+</div>
+
 </body>
+
+<script>
+$(function() {
+    var change = function( txt ) {
+        $("#ul").append( '<li><a href="#">' + txt + '</a></li>' );
+    };
+    change("this is the first change");
+    change("this is the second change");	
+});
+
+$(".dropdown-menu li a").click(function(){
+  $(this).parents(".dropdown").find('.btn').html($(this).text() + ' <span class="caret"></span>');
+  $(this).parents(".dropdown").find('.btn').val($(this).data('value'));
+});
+
+$(".dropdown-menu li a").click(function(){
+
+  $(this).parents(".btn-group").find('.selection').text($(this).text());
+  $(this).parents(".btn-group").find('.selection').val($(this).text());
+
+});
+
+</script>
+
 </html>
